--- a/Client/app/src/main/res/layout/activity_main.xml
+++ b/Client/app/src/main/res/layout/activity_main.xml
@@ -44,8 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            app:headerLayout="@layout/header_menu"
-            app:menu="@menu/menu_main" />
+            app:headerLayout="@layout/header_drawer"
+            app:menu="@menu/menu_drawer" />
     </android.support.v4.widget.DrawerLayout>
 
 </LinearLayout>
