--- a/Client/app/src/main/res/layout/header_drawer.xml
+++ b/Client/app/src/main/res/layout/header_drawer.xml
@@ -7,4 +7,10 @@
     android:orientation="vertical"
     android:padding="15dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+    <TextView
+        android:id="@+id/tv_drawer_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 </LinearLayout>
